# dipl

./: README.md  pyproject.toml  requirements.txt
src/dipl/: __init__.py  dipl.py
tests/: test_dipl.py
