[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dipl"
version = "1.1.0"
authors = [
  { name="Ondrej Pego Jaura", email="vrtulka23@pm.me" },
]
description = "Python reader and parser module for DIP language"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vrtulka23/dipl"
"Bug Tracker" = "https://github.com/vrtulka23/dipl/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]